--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp1.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp1.html
@@ -1,6 +1,6 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contests" target="_blank">ЯрГУ. Кружок. Школьники</a></p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
   <p>Автор кружка Игорь Маслеников</p>
   <p>Всего вышло 34 видео продолжительностью 80:48:04</p>
@@ -124,6 +124,12 @@
 
   <details>
     <summary>Решение на C++</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/4/problem/A" target="_blank">Задача 4А</a>
+      <br><a href="https://codeforces.com/contest/4" target="_blank">Codeforces Beta Round 4 (Дивизион 2) 2010-03-12</a>
+    </div>
+
     <h4>Проверка четности веса арбуза</h4>
     <p>Для решения задачи необходимо определить, можно ли разделить арбуз весом w килограмм на две части, каждая из которых будет весить четное количество килограмм.</p>
     <p>Для этого нужно проверить 2 условия. w должно быть четным числом, так как сумма двух четных чисел всегда четная. w должно быть больше или равно 4, так как минимальный вес каждой части должен быть 2 кг (наименьшее четное положительное число).</p>
@@ -205,6 +211,12 @@ rl.on('line', (input) => {
 
   <details>
     <summary>Решение на C++</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/617/problem/A" target="_blank">Задача 617А</a>
+      <br><a href="https://codeforces.com/contest/617" target="_blank">Codeforces Round 340 (Div. 2) 2016-01-23</a>
+    </div>
+
     <p>Чтобы минимизировать количество шагов, слоник должен делать максимально возможные шаги (т.е. шаги по 5 позиций). После этого, если останется расстояние, которое меньше 5, он сделает один дополнительный шаг.</p>
     <p>Выражение (x + 4) / 5 эквивалентно округлению вверх результата деления x на 5.</p>
 <pre>
@@ -279,6 +291,12 @@ rl.on('line', (input) => {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/791/problem/A" target="_blank">Задача 791А</a>
+      <br><a href="https://codeforces.com/contest/791" target="_blank">Codeforces Round 405 (рейтинговый, Div. 2, по задачам VK Cup 2017 Раунд 1) 2017-03-18</a>
+    </div>
+
     <p>В цикле while обновляем веса Лимака и Боба каждый год. Увеличиваем счетчик лет на каждом шаге.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -339,6 +357,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1351/problem/A" target="_blank">Задача 1351А</a>
+      <br><a href="https://codeforces.com/contest/1351" target="_blank">Testing Round 16 (Unrated) 2020-05-07</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 
@@ -402,6 +426,12 @@ YES
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1742/problem/A" target="_blank">Задача 1742А</a>
+      <br><a href="https://codeforces.com/contest/1742" target="_blank">Codeforces Round 827 (Div. 4) 2022-10-13</a>
+    </div>
+
     <p>Для каждого набора входных данных проверяем три условия: a = b + c, b = a + c, c = a + b</p>
 <pre>
 #include &lt;iostream&gt;
@@ -460,6 +490,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/59/problem/A" target="_blank">Задача 59А</a>
+      <br><a href="https://codeforces.com/contest/59" target="_blank">Codeforces Beta Round 55 (Div. 2) 2011-02-11</a>
+    </div>
+
     <h4>Идея решения:</h4>
     <ol>
       <li>Подсчитаем количество больших и маленьких букв в слове.</li>
@@ -549,6 +585,12 @@ AbCdEfF
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/112/problem/A" target="_blank">Задача 112А</a>
+      <br><a href="https://codeforces.com/contest/112" target="_blank">Codeforces Beta Round 85 (Div. 2 Only) 2011-09-03</a>
+    </div>
+
     <h4>Идея решения:</h4>
     <ol>
       <li>Приведём обе строки к одному регистру (например, к нижнему), чтобы регистр не влиял на сравнение.</li>
@@ -634,6 +676,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/268/problem/A" target="_blank">Задача 268А</a>
+      <br><a href="https://codeforces.com/contest/268" target="_blank">Codeforces Round 164 (Div. 2) 2013-01-28</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 
