--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp10.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp10.html
@@ -1,6 +1,6 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contests" target="_blank">ЯрГУ. Кружок. Школьники</a></p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
@@ -1557,6 +1557,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1676/problem/E" target="_blank">Задача 1676E</a>
+      <br><a href="https://codeforces.com/contest/1676" target="_blank">Codeforces Round 790 (Div. 4) 2022-05-10</a>
+    </div>
+
     <p>Создадим префикс-функцию идя по массиву в убывающем порядке</p>
 <pre>
 #include &lt;iostream&gt;
