--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp2.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp2.html
@@ -1,6 +1,6 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contests" target="_blank">ЯрГУ. Кружок. Школьники</a></p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
@@ -498,6 +498,12 @@ cout &lt;&lt; sum;
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/50/problem/A" target="_blank">Задача 50А</a>
+      <br><a href="https://codeforces.com/contest/50" target="_blank">Codeforces Beta Round 47 2010-12-20</a>
+    </div>
+
     <p>Каждая доминошка занимает 2 клетки. Поэтому максимальное количество доминошек, которое можно уложить на доску, равно половине площади доски с округлением вниз</p>
 <pre>
 #include &lt;iostream&gt;
@@ -645,6 +651,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1/problem/A" target="_blank">Задача 1А</a>
+      <br><a href="https://codeforces.com/contest/1" target="_blank">Codeforces Beta Round 1 2010-02-19</a>
+    </div>
+
     <h4>Идея решения:</h4>
     <ol>
       <li>Чтобы покрыть длину n нужно n/a плит с округлением вверх</li>
@@ -652,7 +664,6 @@ int main() {
       <li>Общее количество плит будет равно произведению количества плит по длине и ширине: (n/a) * (m/a) </li>
       <li>Округление вверх можно реализовать с помощью формулы: x/y = (x+y-1) / y</li>
     </ol>
-
 
 <pre>
 #include &lt;iostream&gt;
@@ -782,6 +793,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/732/problem/A" target="_blank">Задача 732А</a>
+      <br><a href="https://codeforces.com/contest/732" target="_blank">Codeforces Round 377 (Div. 2) 2016-10-17</a>
+    </div>
+
     <p>Общая стоимость лопат должна удовлетворять условию min_count * k = 0 или min_count * k = r (mod 10)</p>
 <pre>
 #include &lt;iostream&gt;
@@ -837,6 +854,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/546/problem/A" target="_blank">Задача 546А</a>
+      <br><a href="https://codeforces.com/contest/546" target="_blank">Codeforces Round 304 (Div. 2) 2015-05-22</a>
+    </div>
+
     <p>Пусть price это цена за w бананов. Если у солдата меньше денег, то borrow это количество денег, которые нужно занять.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -904,6 +927,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/110/problem/A" target="_blank">Задача 110А</a>
+      <br><a href="https://codeforces.com/contest/110" target="_blank">Codeforces Beta Round 84 (Div. 2 Only) 2011-08-29</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 
@@ -979,6 +1008,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/427/problem/A" target="_blank">Задача 427А</a>
+      <br><a href="https://codeforces.com/contest/427" target="_blank">Codeforces Round 244 (Div. 2) 2014-05-02</a>
+    </div>
+
     <h4>Идея решения:</h4>
     <ol>
       <li>Используем счётчик для отслеживания количества свободных полицейских.</li>
@@ -1082,6 +1117,12 @@ Division 1
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1669/problem/A" target="_blank">Задача 1669А</a>
+      <br><a href="https://codeforces.com/contest/1669" target="_blank">Codeforces Round 784 (Div. 4) 2022-04-19</a>
+    </div>
+
     <h4>Идея решения:</h4>
     <ol>
       <li>Для каждого набора входных данных проверяем, в какой диапазон попадает рейтинг.</li>
@@ -1165,6 +1206,12 @@ NO
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1676/problem/A" target="_blank">Задача 1676А</a>
+      <br><a href="https://codeforces.com/contest/1676" target="_blank">Codeforces Round 790 (Div. 4) 2022-05-10</a>
+    </div>
+
     <h4>Идея решения:</h4>
     <p>Для каждого набора входных данных:</p>
     <ol>
@@ -1239,6 +1286,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/492/problem/A" target="_blank">Задача 492А</a>
+      <br><a href="https://codeforces.com/contest/492" target="_blank">Codeforces Round 280 (Div. 2) 2014-11-30</a>
+    </div>
+
     <h4>Построение пирамиды:</h4>
     <ol>
       <li>На каждом шаге увеличиваем высоту пирамиды на 1.</li>
@@ -1321,6 +1374,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/732/problem/C" target="_blank">Задача 732C</a>
+      <br><a href="https://codeforces.com/contest/732" target="_blank">Codeforces Round 377 (Div. 2) 2016-10-17</a>
+    </div>
+
     <h4>Идея решения:</h4>
     <ol>
       <li>Определим, сколько дней Василий провёл в санатории. Это можно сделать, найдя максимальное количество посещений одной из трапез, так как каждая трапеза происходит один раз в день.</li>
@@ -1425,6 +1484,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/732/problem/B" target="_blank">Задача 732B</a>
+      <br><a href="https://codeforces.com/contest/732" target="_blank">Codeforces Round 377 (Div. 2) 2016-10-17</a>
+    </div>
+
     <h4>Идея решения:</h4>
     <ol>
       <li>Для каждого дня i (начиная со второго) проверяем, выполняется ли условие b<sub>i-1</sub> + b<sub>i</sub> &ge; k, где b<sub>i</sub> — общее количество прогулок в день i.</li>
@@ -1536,6 +1601,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/895/problem/A" target="_blank">Задача 895A</a>
+      <br><a href="https://codeforces.com/contest/895" target="_blank">Codeforces Round 448 (Div. 2) 2017-11-26</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 #include &lt;algorithm&gt;
@@ -1655,6 +1726,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/733/problem/B" target="_blank">Задача 733B</a>
+      <br><a href="https://codeforces.com/contest/733" target="_blank">Codeforces Round 378 (Div. 2) 2016-10-28</a>
+    </div>
+
     <h4>Идея решения:</h4>
     <ol>
       <li>Вычислим исходные значения L и R.</li>
