--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp3.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp3.html
@@ -1,6 +1,6 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contests" target="_blank">ЯрГУ. Кружок. Школьники</a></p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
@@ -246,6 +246,12 @@ STAIR
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1950/problem/A" target="_blank">Задача 1950A</a>
+      <br><a href="https://codeforces.com/contest/1950" target="_blank">Codeforces Round 937 (Div. 4) 2024-03-27</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 
@@ -316,6 +322,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1041/problem/A" target="_blank">Задача 1041A</a>
+      <br><a href="https://codeforces.com/contest/1041" target="_blank">Codeforces Round 509 (Div. 2) 2018-09-16</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 
@@ -393,6 +405,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/136/problem/A" target="_blank">Задача 136A</a>
+      <br><a href="https://codeforces.com/contest/136" target="_blank">Codeforces Beta Round 97 (Div. 2) 2011-12-08</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 #include &lt;vector&gt;
@@ -476,6 +494,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1669/problem/B" target="_blank">Задача 1669B</a>
+      <br><a href="https://codeforces.com/contest/1669" target="_blank">Codeforces Round 784 (Div. 4) 2022-04-19</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 
@@ -576,6 +600,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1360/problem/B" target="_blank">Задача 1360B</a>
+      <br><a href="https://codeforces.com/contest/1360" target="_blank">Codeforces Round 644 (Div. 3) 2020-05-24</a>
+    </div>
+
     <p>Из всех чисел нужно найти два числа с минимальной разницей. Если есть два одинаковых числа, то ответ будет 0, иначе ответом будет модуль разницы двух самых близких чисел</p>
 <pre>
 #include &lt;iostream&gt;
@@ -679,6 +709,12 @@ NO
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1296/problem/A" target="_blank">Задача 1296A</a>
+      <br><a href="https://codeforces.com/contest/1296" target="_blank">Codeforces Round 617 (Div. 3) 2020-02-03</a>
+    </div>
+
     <p>Сумма чет+чет делится на 2. Сумма нечет+нечет делится на 2. Сумма чет+нечет не делится на 2.</p>
     <p>Нужно узнать сколько нечетных чисел. Если все числа четные, то сумма будет четная при любых преобразованиях. Если все числа нечетные, то сумма будет четная если их четное количество, сумма будет нечетная если их нечетное количество. Если есть четные и нечетные числа, то преобразовывая нечетные в четные оставим одно нечетное число чтобы получить нечетную сумму.</p>
 <pre>
@@ -749,6 +785,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/200/problem/B" target="_blank">Задача 200B</a>
+      <br><a href="https://codeforces.com/contest/200" target="_blank">Codeforces Round 126 (Div. 2) 2012-06-24</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 
@@ -838,6 +880,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/278/problem/A" target="_blank">Задача 278A</a>
+      <br><a href="https://codeforces.com/contest/278" target="_blank">Codeforces Round 170 (Div. 2) 2013-02-28</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 #include &lt;vector&gt;
@@ -933,6 +981,12 @@ NO
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1420/problem/A" target="_blank">Задача 1420A</a>
+      <br><a href="https://codeforces.com/contest/278" target="_blank">Codeforces Round 672 (Div. 2) 2020-09-24</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 #include &lt;vector&gt;
@@ -1057,6 +1111,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/886/problem/A" target="_blank">Задача 886A</a>
+      <br><a href="https://codeforces.com/contest/886" target="_blank">Технокубок 2018 - Отборочный Раунд 3 2017-11-12</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 
@@ -1130,6 +1190,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/886/problem/B" target="_blank">Задача 886B</a>
+      <br><a href="https://codeforces.com/contest/886" target="_blank">Технокубок 2018 - Отборочный Раунд 3 2017-11-12</a>
+    </div>
+
     <p>Заведем массив (на 200001 элементов потому что всего столовок может быть не больше 200000)для всех возможных номеров столовых. И будем для каждого номера записывать день, в который мы последний раз посещали эту столовую. Когда массив заполним, то найдем в нем столовую с наименьшим значением дня когда мы были в ней последний раз. Ответ всегда будет единственным, потому что в один день Влад ходил только в одну столовую.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -1220,6 +1286,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/714/problem/B" target="_blank">Задача 714B</a>
+      <br><a href="https://codeforces.com/contest/714" target="_blank">Codeforces Round 371 (Div. 2) 2016-09-13</a>
+    </div>
+
     <p>Чтобы выполнилось условие, необходимо чтобы изначально во всех элементах массива содержалось одно из трех</p>
     <ol>
       <li>одинаковое число</li>
@@ -1325,6 +1397,12 @@ NO
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1598/problem/B" target="_blank">Задача 1598B</a>
+      <br><a href="https://codeforces.com/contest/1598" target="_blank">Educational Codeforces Round 115 (рейтинговый для Div. 2) 2021-10-10</a>
+    </div>
+
     <p>Функция canDivideStudents: Перебирает все возможные пары дней (всего 10 пар). Для каждой пары дней проверяет, можно ли разделить студентов на две равные группы: Считает количество студентов, которые могут посещать занятия только в первый день, только во второй день или в оба дня. Если количество студентов, которые могут посещать только один из дней, не превышает половину от общего числа студентов, то такая пара дней подходит.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -1439,6 +1517,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1676/problem/H1" target="_blank">Задача 1676H1</a>
+      <br><a href="https://codeforces.com/contest/1676" target="_blank">Codeforces Round 790 (Div. 4) 2022-05-10</a>
+    </div>
+
     <ul>
       <li>У нас есть два терминала: верхний и нижний.</li>
       <li>Каждый провод соединяет отрезок i на верхнем терминале с отрезком a[i] на нижнем терминале.</li>
@@ -1625,6 +1709,12 @@ n = 4
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1950/problem/B" target="_blank">Задача 1950B</a>
+      <br><a href="https://codeforces.com/contest/1950" target="_blank">Codeforces Round 937 (Div. 4) 2024-03-27</a>
+    </div>
+
     <p>Цикл в цикле. Проходим по n строкам. Проходим по n столбцам. Если это четная строка (0,2,4...) и четный столбец, то выводим "##". Иначе выводим "..". После каждой строки выводим '\n' и повторяем вывод еще раз для следующей строки.</p>
 <pre>
 #include &lt;iostream&gt;
