--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp4.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp4.html
@@ -1,6 +1,6 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contests" target="_blank">ЯрГУ. Кружок. Школьники</a></p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
@@ -334,6 +334,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/151/problem/A" target="_blank">Задача 151A</a>
+      <br><a href="https://codeforces.com/contest/151" target="_blank">Codeforces Round 107 (Div. 2) 2012-02-17</a>
+    </div>
+
     <p>Посчитаем общий объем газировки, объем газировки для одного тоста, число тостов с газировкой. Посчитаем общее число долек, число долек для одного тоста, число тостов с дольками. Посчитаем общее число граммов соли, число граммов соли для одного тоста, число тостов с солью. Выберем минимальное число тостов.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -426,6 +432,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1335/problem/A" target="_blank">Задача 1335A</a>
+      <br><a href="https://codeforces.com/contest/1335" target="_blank">Codeforces Round 634 (Div. 3) 2020-04-12</a>
+    </div>
+
     <p>Если конфет 1 или 2 то поделить их нельзя. Если конфет четное число, то есть n/2 - 1 способ, потому что их не может быть поровну. Если конфет нечетное число, то есть n/2 способов округленное вниз.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -518,6 +530,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1675/problem/B" target="_blank">Задача 1675B</a>
+      <br><a href="https://codeforces.com/contest/1675" target="_blank">Codeforces Round 787 (Div. 3) 2022-05-03</a>
+    </div>
+
     <p>Чтобы последовательность из чисел от 0 до 2млрд. была строго возрастающая, как минимум, надо чтобы каждое i-ое число в массиве было не меньше i. Начиная с n-2 элемента массива будем проверять, что он меньше n-1 элемента и не меньше числа n - 2. Если больше n-1 элемента то делим его на 2, если меньше числа n - 2 то возвращаем -1. Считаем число делений на 2 и выводим как результат.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -625,6 +643,12 @@ int main() {
 
   <details>
     <summary>Решенине</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/758/problem/A" target="_blank">Задача 758A</a>
+      <br><a href="https://codeforces.com/contest/758" target="_blank">Codeforces Round 392 (Div. 2) 2017-01-19</a>
+    </div>
+
     <p>Нужно найти самого богатого человека, и состояние всех остальных доводить до этого значения.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -700,6 +724,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1092/problem/B" target="_blank">Задача 1092B</a>
+      <br><a href="https://codeforces.com/contest/1092" target="_blank">Codeforces Round 527 (Div. 3) 2018-12-18</a>
+    </div>
+
     <p>Нужно отсортировать входной массив и объединять соседние элементы в одну команду. Разница между соседними элементами это количество задач, которые необходимо решить, чтобы попасть в команду.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -765,6 +795,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1328/problem/A" target="_blank">Задача 1328A</a>
+      <br><a href="https://codeforces.com/contest/1328" target="_blank">Codeforces Round 629 (Div. 3) 2020-03-26</a>
+    </div>
+
     <p>Если a делится на b без остатка то выводим 0. Если есть остаток от деления, то его нужно вычесть из b чтобы получить результат</p>
 <pre>
 #include &lt;iostream&gt;
@@ -842,6 +878,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1367/problem/B" target="_blank">Задача 1367B</a>
+      <br><a href="https://codeforces.com/contest/1367" target="_blank">Codeforces Round 650 (Div. 3) 2020-06-15</a>
+    </div>
+
     <p>Массив можно сделать хорошим если число четных элементов на нечетных местах равно числу нечетных элементов на четных местах в массиве. Надо вернуть это число (четных элементов на нечентных местах) Иначе массив сделать хорошим нельзя и мы возвращаем -1.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -935,6 +977,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1352/problem/A" target="_blank">Задача 1352A</a>
+      <br><a href="https://codeforces.com/contest/1352" target="_blank">Codeforces Round 640 (Div. 4) 2020-05-09</a>
+    </div>
+
     <p>Максимально возможное входное число содержит 5 цифр, поэтому для отевта заведем массив на 5 элементов. Если остаток от деления на 10 равен нулю, то увеличиваем счетчик нулей на 1, иначе записываем в массив остаток от деления с числом нулей из счетчика нулей, увеличиваем число нулей на 1 и число чисел в ответе на 1.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -1027,6 +1075,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1433/problem/A" target="_blank">Задача 1433A</a>
+      <br><a href="https://codeforces.com/contest/1433" target="_blank">Codeforces Round 677 (Div. 3) 2020-10-20</a>
+    </div>
+
     <p>Определяем последнюю цифру dig и количество цифр cnt в номере ответившей квартиры. Значит в 4 квартиры каждой предыдущей цифры уже звонили. Сумма цифр в этих 4 кварирах равна 1 + 2 + 3 + 4 = 10. Прибавим к этому цифры от 1 до cnt.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -1111,6 +1165,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/940/problem/A" target="_blank">Задача 940A</a>
+      <br><a href="https://codeforces.com/contest/940" target="_blank">Codeforces Round 466 (Div. 2) 2018-02-24</a>
+    </div>
+
     <p>Нужно отсортировать координаты точек, проверить расстояние между каждыми двумя точками. Это цикл в цикле. Выбрать максимальное расстояние, меньшее или равно заданному диаметру. </p>
 <pre>
 #include &lt;iostream&gt;
@@ -1188,6 +1248,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1668/problem/A" target="_blank">Задача 1668A</a>
+      <br><a href="https://codeforces.com/contest/1668" target="_blank">Codeforces Round 783 (Div. 2) 2022-04-14</a>
+    </div>
+
     <p>Из двуx сторон n и m определяем длинную сторону. Меняем n и m так, чтобы в n была длинная сторона. Если короткая сторона 1, а длинная больше 2 то решения нет, возвращаем -1.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -1269,6 +1335,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/595/problem/A" target="_blank">Задача 595A</a>
+      <br><a href="https://codeforces.com/contest/595" target="_blank">Codeforces Round 330 (Div. 2) 2015-11-08</a>
+    </div>
+
     <p>К нам приходят два числа. n это число этажей, m это число квартир на этаже. В каждой квартире 2 соседних окна. Всего квартир в доме n * m. Мы можем принимать в цикле по два числа и проверять если одно из них равно 1 то в этой квартире горит свет и значит там не спят.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -1343,6 +1415,13 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+
+    <div>
+      <a href="https://codeforces.com/contest/676/problem/A" target="_blank">Задача 676A</a>
+      <br><a href="https://codeforces.com/contest/676" target="_blank">Codeforces Round 354 (Div. 2) 2016-05-24</a>
+    </div>
+
     <p>Найти индексы минимального и максимального элемента. Выбрать индекс ближайший краю. Найти максимум от индекса до края.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -1432,6 +1511,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1676/problem/D" target="_blank">Задача 1676D</a>
+      <br><a href="https://codeforces.com/contest/1676" target="_blank">Codeforces Round 790 (Div. 4) 2022-05-10</a>
+    </div>
+
     <p>Создадим массив B размером такой же как входной массив A. В клетку B[i] будем записывать сумму из клеток массива A на диагоналях которой она находится.</p>
 <pre>
 #include &lt;iostream&gt;
@@ -1553,6 +1638,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/405/problem/A" target="_blank">Задача 405A</a>
+      <br><a href="https://codeforces.com/contest/405" target="_blank">Codeforces Round 238 (Div. 2) 2014-03-21</a>
+    </div>
+
     <p>Поскольку гравитация переключается вправо, то есть кубики падают на правую стенку, то достаточно входной массив отсортировать по возрастанию.</p>
 <pre>
 #include &lt;iostream&gt;
