--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp5.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp5.html
@@ -1,6 +1,6 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contests" target="_blank">ЯрГУ. Кружок. Школьники</a></p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
@@ -228,6 +228,12 @@ getline(cin, str2, ':');
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/281/problem/A" target="_blank">Задача 281A</a>
+      <br><a href="https://codeforces.com/contest/281" target="_blank">Codeforces Round 172 (Div. 2) 2013-03-05</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 #include &lt;string&gt;
@@ -403,6 +409,12 @@ p43s
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/71/problem/A" target="_blank">Задача 71A</a>
+      <br><a href="https://codeforces.com/contest/71" target="_blank">Codeforces Beta Round 65 (Div. 2) 2011-03-29</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 #include &lt;string&gt;
@@ -530,6 +542,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/236/problem/A" target="_blank">Задача 236A</a>
+      <br><a href="https://codeforces.com/contest/236" target="_blank">Codeforces Round 146 (Div. 2) 2012-10-20</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 #include &lt;vector&gt;
@@ -597,6 +615,12 @@ TheQuickBrownFoxJumpsOverTheLazyDog
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/520/problem/A" target="_blank">Задача 520A</a>
+      <br><a href="https://codeforces.com/contest/520" target="_blank">Codeforces Round 295 (Div. 2) 2015-03-02</a>
+    </div>
+
     <p>Переведем символы строки в нижний регистр и запишем в вектор. Сделаем сортировку векторов. Буквы будут соседние если разница между ними равна 1. Посчитаем число букв в векторе. Если ровно 26, то это панграмма</p>
 <pre>
 #include &lt;iostream&gt;
@@ -1791,6 +1815,12 @@ y
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1676/problem/C" target="_blank">Задача 1676C</a>
+      <br><a href="https://codeforces.com/contest/1676" target="_blank">Codeforces Round 790 (Div. 4) 2022-05-10</a>
+    </div>
+
     <p>Решение за O(n²). Цикл в цикле находим разницу между буквами по всем парам. Каждый раз определяя минимальную.</p>
 <pre>
 #include &lt;iostream&gt;
