--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp9.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp9.html
@@ -1,6 +1,6 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contests" target="_blank">ЯрГУ. Кружок. Школьники</a></p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
@@ -1106,6 +1106,12 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/contest/1669/problem/E" target="_blank">Задача 1669E</a>
+      <br><a href="https://codeforces.com/contest/1669" target="_blank">Codeforces Round 784 (Div. 4) 2022-04-19</a>
+    </div>
+
 <pre>
 #include &lt;iostream&gt;
 #include &lt;vector&gt;
