--- a/src/components/alg/alg-pract/silver/pages/elem-silver-01.html
+++ b/src/components/alg/alg-pract/silver/pages/elem-silver-01.html
@@ -1232,6 +1232,445 @@ int main() {
 
   <details>
     <summary>Теория</summary>
+    <p>Операции целочисленного деления и вычисления остатка от деления имеют широкий спектр применения. Вот только несколько из них, которые могут вам пригодится в ближайшее время.</p>
+    <ol>
+      <li>
+        <h4>Распределение элементов по определенному количеству групп.</h4>
+        <p>Например, если у нас есть 10 кусочков шоколадки, и мы делим их на 3 друзей, то результат целочисленного деления будет 3. Это означает, что каждый друг получит по 3 целых кусочка шоколадки. А если вычислим 10 % 3 = 1, это будет означать, что 1 долька останется не разделенной.</p>
+      </li>
+      <li>
+        <h4>Разбиение числа на цифры.</h4>
+        <p>Например, число 123 можно разбить на цифры следующим образом:</p>
+        <code>123 % 10 = 3 ( 3 - цифра единиц)</code>
+        <code>123 / 10 = 12</code>
+        <code>12 % 10 = 2 (2 - цифра десятков)</code>
+        <code>12 / 10 = 1 (1 - цифра сотен)</code>
+      </li>
+      <li>
+        <h4>Модулярная арифметика</h4>
+        <p>Это система арифметики, в которой числа "оборачиваются" по достижении определенного значения, называемого модулем. Она часто используется в различных областях, таких как криптография, компьютерные науки, теория чисел и даже в музыке.</p>
+        <p>Например, возьмем циферблат часов. На часах со стрелками циферблат разделён на 12 частей, которые мы обозначим числами 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11. Время на аналоговом циферблате соответствует времени после полудня на экране цифровых часов.</p>
+        <p>Когда мы говорим, например, что сейчас 14:00, мы можем также сказать, что сейчас два часа дня (14 % 12 = 2). Тот же принцип применяется и в случае измерения углов. Угол в 370 градусов равен углу в 10 градусов, потому что от первого значения мы должны вычесть полный оборот в 360 градусов (или 370 % 360 = 10).</p>
+        <p>Другой пример, разбить 135 минут на часы и минуты. В одном часе 60 минут. Следовательно, если 135 поделить целочисленно на 60, то можно узнать сколько полных часов в 135 минутах (135 / 60 = 2 часа). Если вычислить остаток от деления, то можно узнать оставшиеся минуты в неполном часе (135 % 60 = 15 минут). То есть 135 минут - это 2 часа и 15 минут.</p>
+      </li>
+    </ol>
+  </details>
+
+  <details>
+    <summary>Условие</summary>
+    <h4>Входные данные</h4>
+    <p>Во входной строке содержится одно число - продолжительность фильма в минутах.</p>
+
+    <h4>Выходные данные</h4>
+    <p>Выведите данную продолжительность в формате часы:минуты.</p>
+
+    <h4>Пример</h4>
+    <code>135</code>
+    <code>2:15</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int t, h, m;
+  cin >> t;
+  h = t / 60;
+  m = t % 60;
+  cout &lt;&lt; h &lt;&lt; ":" &lt;&lt; m &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>Задача 2. k-я секунда суток</h4>
+
+  <details>
+    <summary>Условие</summary>
+    <p>Идёт k-я секунда суток. Определите, сколько целых часов h и целых минут m прошло c начала суток. Например, если</p>
+    <code>k = 1325 7= 3⋅3600 + 40⋅60 + 57, то h=3, m=40.</code>
+    <p>Запрещенные операторы: if; for; while; do; max.</p>
+
+    <h4>Входные данные</h4>
+    <p>На вход программе подается целое число k (0 ≤ k ≤ 86399).</p>
+
+    <h4>Выходные данные</h4>
+    <p>Выведите на экран фразу:</p>
+    <code>It is ... hours ... minutes.</code>
+    <p>Вместо многоточия программа должна выводить значения h и m, отделяя их от слов ровно одним пробелом.</p>
+
+    <h4>Пример</h4>
+    <code>13257</code>
+    <code>It is 3 hours 40 minutes.</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int k, h, m;
+  cin >> k;
+  h = k / 3600;
+  k -= h * 3600;
+  m = k / 60;
+  cout &lt;&lt; "It is " &lt;&lt; h &lt;&lt; " hours " &lt;&lt; m &lt;&lt; " minutes." &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>Задача 3. Электронные часы - 2</h4>
+
+  <details>
+    <summary>Условие</summary>
+    <p>Электронные часы показывают время в формате h:mm:ss, то есть сначала записывается количество часов в диапазоне от 0 до 23, потом обязательно двузначное количество минут, затем обязательно двузначное количество секунд. Количество минут и секунд при необходимости дополняются до двузначного числа нулями. С начала суток прошло n секунд. Выведите, что покажут часы.</p>
+    <p>Запрещенные операторы: if; ?; while; do; for; max.</p>
+
+    <h4>Входные данные</h4>
+    <p>Вводится число n - целое, положительное, не превышает 10⁷.</p>
+
+    <h4>Выходные данные</h4>
+    <p>Выведите показания часов, соблюдая формат.</p>
+
+    <h4>Пример 1</h4>
+    <code>3602</code>
+    <code>1:00:02</code>
+
+    <h4>Пример 2</h4>
+    <code>129700</code>
+    <code>12:01:40</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n, h, m, s;
+  cin >> n;
+  n %= 86400;
+  h = n / 3600;
+  n -= h * 3600;
+  m = n / 60;
+  n -= m * 60;
+  s = n;
+
+  printf("%d:%02d:%02d", h, m, s);
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>Задача 4. Единицы числа</h4>
+
+  <details>
+    <summary>Условие</summary>
+    <p>Кролик Клевер вместе с друзьями стали изучать математику. Первое что они узнали - это то, что все числа состоят из цифр. Напишите программу, которая поможет Кролику Клеверу определить цифру, обозначающую единицы в данном числе. Напомним, что единицы - это последняя цифра числа.</p>
+
+    <h4>Входные данные</h4>
+    <p>Вводится натуральное число.</p>
+
+    <h4>Выходные данные</h4>
+    <p>Выведите ответ на задачу.</p>
+
+    <h4>Пример 1</h4>
+    <code>2007</code>
+    <code>7</code>
+
+    <h4>Пример 2</h4>
+    <code>90</code>
+    <code>0</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n, m;
+  cin >> n;
+  m = n % 10;
+  cout &lt;&lt; m &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>Задача 5. Десятки числа</h4>
+
+  <details>
+    <summary>Условие</summary>
+    <p>Кролик Клевер вместе с друзьями стали изучать математику. Первое что они узнали - это то, что все числа состоят из цифр. Напишите программу, которая поможет Кролику Клеверу определить цифру десятков в данном числе. Напомним, что десятки - это предпоследняя цифра числа.</p>
+
+    <h4>Входные данные</h4>
+    <p>Вводится натуральное число.</p>
+
+    <h4>Выходные данные</h4>
+    <p>Выведите ответ на задачу.</p>
+
+    <h4>Пример 1</h4>
+    <code>2007</code>
+    <code>0</code>
+
+    <h4>Пример 2</h4>
+    <code>90</code>
+    <code>9</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n, m;
+  cin >> n;
+  m = (n / 10) % 10;
+  cout &lt;&lt; m &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>Задача 6. Сумма квадратов цифр</h4>
+
+  <details>
+    <summary>Условие</summary>
+    <p>Напишите программу, которая по исходному пятизначному числу находит сумму квадратов цифр данного числа.</p>
+
+    <h4>Входные данные</h4>
+    <p>На вход программы подается натуральное пятизначное число.</p>
+
+    <h4>Выходные данные</h4>
+    <p>Выведите ответ на задачу.</p>
+
+    <h4>Пример</h4>
+    <code>12345</code>
+    <code>55</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n, n1, n2, n3, n4, n5;
+  cin >> n;
+  n1 = n % 10;
+  n /= 10;
+  n2 = n % 10;
+  n /= 10;
+  n3 = n % 10;
+  n /= 10;
+  n4 = n % 10;
+  n /= 10;
+  n5 = n;
+  int res = n1 * n1 + n2 * n2 + n3 * n3 + n4 * n4 + n5 * n5;
+  cout &lt;&lt; res &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>Задача 7. Перестановка цифр</h4>
+
+  <details>
+    <summary>Условие</summary>
+    <h4>Входные данные</h4>
+
+    <p>С клавиатуры вводится натуральное трехзначное число.</p>
+
+    <h4>Выходные данные</h4>
+    <p>Выведите через пробел в одну строку сумму цифр числа и новое число, образованное перестановкой единиц и десятков.</p>
+
+    <h4>Пример</h4>
+    <code>123</code>
+    <code>6 132</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n, n1, n2, n3;
+  cin >> n;
+  n1 = n % 10;
+  n /= 10;
+  n2 = n % 10;
+  n /= 10;
+  n3 = n;
+  int res1 = n1 + n2 + n3;
+  cout &lt;&lt; res1 &lt;&lt; ' ' &lt;&lt; n3 &lt;&lt; n1 &lt;&lt; n2 &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>Задача 8. Новое число</h4>
+
+  <details>
+    <summary>Условие</summary>
+    <p>Дано четырехзначное число. Написать программу, которая выводит на экран число, образованное при перестановке первой и второй, третьей и четвертой цифр заданного числа.</p>
+
+    <h4>Пример</h4>
+    <code>4561</code>
+    <code>5416</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n, n1, n2, n3, n4;
+  cin >> n;
+  n1 = n % 10;
+  n /= 10;
+  n2 = n % 10;
+  n /= 10;
+  n3 = n % 10;
+  n /= 10;
+  n4 = n;
+  cout &lt;&lt; n3 &lt;&lt; n4 &lt;&lt; n1 &lt;&lt; n2 &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>Задача 9. Следующая фотография</h4>
+
+  <details>
+    <summary>Условие</summary>
+    <p>На странице сайта размещена карусель с фотографиями. Фотографии в каруселе пронумерованы от 1 до n. Карусель содержит кнопки вперед и назад. При нажатии кнопки вперед, в карусель загружается следующая фотография (фотография с номером на 1 больше). Если в каруселе отображается последняя фотография (с номером n), то при нажатии кнопки вперед загружается первая фотография (фотография с номером 1).</p>
+    <p>Всего карусель содержит n фотографий. Посетитель сайта сейчас просматривает фотографию с номером m. Фотография под каким номером загрузится в карусель, если посетитель нажмет один раз кнопку вперед?</p>
+    <p>Запрещенные операторы: if; while; for; ?</p>
+
+    <h4>Формат входных данных</h4>
+    <p>Программа получает на вход две строки. В первой строке записано натуральное число n (n &lt; 109). Во второй - натуральное число m (1≤ m ≤ n).</p>
+
+    <h4>Формат выходных данных</h4>
+    <p>Выведите одно число - номер следующей фотографии.</p>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n, m;
+  cin >> n >> m;
+  cout &lt;&lt; m % n + 1 &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>Задача 10. Круговой велопробег</h4>
+
+  <details>
+    <summary>Условие</summary>
+    <p>В деревне Круглая первые дома построены вдоль главной кольцевой дороги длиной M километров. Эти дома имеют номера от 1 до M. Василий ведет здоровый образ жизни и ежедневно проезжает на велосипеде K километров по этой дороге. Сегодня он начал движение от дома с номером S. Возле какого дома он сегодня закончит свой велопробег? Василий всегда двигается в сторону увеличения номеров домов.</p>
+    <p>Запрещенные операторы: if; while; for</p>
+
+    <h4>Входные данные</h4>
+    <p>Программа получает на вход три строки. В первой строке записано число M (1 ≤ M ≤ 100) -  протяженность главной кольцевой дороги. Во второй строке записано число K (1 ≤ K ≤ 10⁵) - количество километров, которые проезжает Василий по этой дороге. В третьей строке записано число S (1 ≤ S ≤ M) - номер дома, от которого начал движение Василий.</p>
+
+    <h4>Выходные данные</h4>
+    <p>Выведите на экран ответ ответ на задачу.</p>
+
+    <h4>Пример 1</h4>
+<pre>
+12
+2
+3
+</pre>
+    <code>5</code>
+
+    <h4>Пример 2</h4>
+<pre>
+12
+12
+1
+</pre>
+    <code>1</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int m, k, s, d;
+  cin >> m >> k >> s;
+  d = (k + s - 1) % m + 1;
+  cout &lt;&lt; d &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>Задача 11. Конец уроков</h4>
+
+  <details>
+    <summary>Условие</summary>
+    <p>В некоторой школе занятия начинаются в 9:00. Продолжительность урока — 45 минут, после 1-го, 3-го, 5-го и т.д. уроков перемена 5 минут, а после 2-го, 4-го, 6-го и т.д. — 15 минут. Определите, когда заканчивается указанный урок.</p>
+    <p>Запрещенные операторы: if; while; for; ?; until</p>
+
+    <h4>Входные данные</h4>
+    <p>Дан номер урока (число от 1 до 10).</p>
+
+    <h4>Выходные данные</h4>
+    <p>Выведите два целых числа: время окончания урока в часах и минутах. При решении этой задачи нельзя пользоваться циклами и условными инструкциями.</p>
+
+    <h4>Пример 1</h4>
+    <code>3</code>
+    <code>11 35</code>
+
+    <h4>Пример 2</h4>
+    <code>2</code>
+    <code>10 35</code>
   </details>
 </article>
 
