--- a/src/components/alg/alg-conspect/yargu3/pages/elem-spRound993.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-spRound993.html
@@ -1,6 +1,6 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>ЯрГУ. Кружок. Контесты</p>
+  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
   <p>Автор кружка Игорь Маслеников</p>
 </article>
 
